--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.9.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
