--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs-mongo-crud",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "crud nestjs with mongo",
+  "author": "Gery Merdiko",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
